# parser

./: .flake8  pyproject.toml  scrapy.cfg
src/: __init__.py
src/celery/: __init__.py  _app.py  _tasks.py  run.py  tasks.py  test_spider.py  utils.py
src/core/: base_settings.py  consts.py  middleware.py  pipelines.py  spider.py  utils.py
src/readmanga/: base.py  chapter.py  detail.py  entrypoint.py  images.py  items.py  pipelines.py  settings.py
src/readmanga/list/: spider.py
src/readmanga/spiders/: __init__.py  chapters.py  detail.py  images.py
src/readmanga/spiders/list/: spider.py  utils.py
