[tool.poetry]
name = "sora-parser"
version = "0.1.0"
description = ""
authors = ["dhvcc <1337kwiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
celery = "^5.2.0"
redis = "^4.2.2"
asgiref = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
ipython = "^7.21.0"
pre-commit = "^2.11.1"
rich = "^10.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
